# xarray_regridder

./: README.md  setup.cfg
scripts/: sync.sh
src/xarray_regridder/api/: regridder.py
src/xarray_regridder/cli/: nearest_s2d_regrdder.py  regridder.py  xarray_regridder_main.py  xesmf_regridder.py
test/unittests/: test_regrid.py
