[metadata]
name = xarray_regridder
version = V0.1
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Regridding tools based on pyproj, xarray and xesmf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/xarray_regridder
project_urls =
    Bug Tracker = https://github.com/surftemp/xarray_regridder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    xarray_regridder = xarray_regridder.cli.xarray_regridder_main:main
    xesmf_regridder = xarray_regridder.cli.xesmf_regridder:main
    nearest_s2d_regridder = xarray_regridder.cli.nearest_s2d_regridder:main

[options.packages.find]
where = src
